--- a/ansible/roles/ghq/tasks/main.yml
+++ b/ansible/roles/ghq/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: download ghq binary
   get_url:
-    url: https://github.com/x-motemen/ghq/releases/download/v1.1.0/ghq_linux_amd64.zip
+    url: "https://github.com/x-motemen/ghq/releases/download/{{ version }}/ghq_linux_amd64.zip"
     dest: /tmp
 
 - name: unzip ghq binary
