--- a/ansible/roles/tools/tasks/main.yml
+++ b/ansible/roles/tools/tasks/main.yml
@@ -19,8 +19,8 @@
   copy:
     src: "/tmp/{{ item.item.item.binary }}"
     dest: /usr/local/bin/
-    owner: root
-    group: root
+    owner: "{{ owner }}"
+    group: "{{ group }}"
     mode: 0755
     remote_src: yes
   with_items:
